# simulator-robotic-software

./: .gitignore  pyproject.toml  release  robot_data.json
codes/: challenge1  challenge2  challenge3  challenge4  challenge5  challenge6  spinner.ino
gamification_logs/: desafio_1_02-10-2023.txt  desafio_1_04-10-2023.txt  desafio_1_09-10-2023.txt  desafio_1_16-10-2023.txt  desafio_2_02-10-2023.txt  desafio_2_04-10-2023.txt  desafio_3_04-10-2023.txt  desafio_4_04-10-2023.txt  desafio_5_02-10-2023.txt  resultados.txt
simulator/: arduino.py  main.py  test_ast.py  test_challenge1.py  test_challenge2.py  test_challenge4.py  test_challenge5.py  test_grammar.py
simulator/compiler/: Arduino.tokens  ArduinoLexer.py  ArduinoListener.py  ArduinoParser.py  ArduinoVisitor.py  ast.py  ast_builder_visitor.py  ast_visitor.py  code_generator.py  commands.py  semantical_errors.py  transpiler.py
simulator/files/: files_reader.py
simulator/graphics/: controller.py  drawing.py  gui.py  huds.py  layers.py  robot_drawings.py  screen_updater.py  text_widget_handler.py
simulator/interpreter/: README.md  arduino.py  associativity.py  ast_interpreter.py  cli.py  diagnostic.py  environment.py  expr.py  grammar.abnf  interpreter.py  parser.py  precedence.py  preprocessor.py  resolver.py  scanner.py  scope.py  stmt.py  token.py  types.py
simulator/libraries/: keyboard.py  libs.py  serial.py  servo.py  simplified.c  standard.py  string.py
simulator/output/: console.py  console_gamification.py
simulator/robot_components/: boards.py  elements.py  robots.py
tests/file-tests/: arrays.txt
(+74 files in other folders)
