[project]
name = "simulator-robotic-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.11.1",
    "cryptography>=44.0.2",
    "pillow>=11.0.0",
]

[tool.setuptools.packages.find]
where = ["simulator"]
